# sql_jupyter

./: pyproject.toml
mysql_jupyter/: Graded Assessment.ipynb  GradedAssessment.ipynb  LittleLemon.ipynb  TestAssessment.ipynb  global_super_store.mwb  mangato_gallo.mwb  trigger.sql
mysql_jupyter/Final Assignment/: Global Super Store Assignment.twbx  Global Super Store Assignment.twbx:Zone.Identifier  Global Super Store.twbx  Global Super Store.twbx:Zone.Identifier
