[tool.poetry]
name = "mysql-jupyter"
version = "0.1.0"
description = ""
authors = ["Ultra-Code <mega.alpha100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.7"
mysql-connector-python = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
